--- a/pages/index.ejs
+++ b/pages/index.ejs
@@ -32,8 +32,8 @@
             <li class="list-group-item d-flex justify-content-between align-items-center">
                 <p><%= notes[i].title %></p>
                 <div>
-                    <button class="btn btn-primary" data-type="edit" data-id="<%= notes[i].id %>">edit</button>
-                    <button class="btn btn-danger" data-type="remove" data-id="<%= notes[i].id %>">&times</button>
+                    <button class="btn btn-primary m-1" data-type="edit" data-id="<%= notes[i].id %>">edit</button>
+                    <button class="btn btn-danger m-1" data-type="remove" data-id="<%= notes[i].id %>">&times</button>
                 </div>
             </li>
             <% } %>
